[workspace]

members = [
    "applications/taiji_dan_app_utilities",
    "applications/taiji_dan_wallet_cli",
    "applications/taiji_dan_wallet_daemon",
    "applications/taiji_indexer",
    "applications/taiji_signaling_server",
    "applications/taiji_validator_node_cli",
    "applications/taiji_validator_node",
    "clients/base_node_client",
    "clients/validator_node_client",
    "clients/wallet_daemon_client",
    "dan_layer/comms_rpc_state_sync",
    "dan_layer/consensus",
    "dan_layer/consensus_tests",
    "dan_layer/epoch_manager",
    "dan_layer/indexer_lib",
    "dan_layer/p2p",
    "dan_layer/state_store_sqlite",
    "dan_layer/storage_lmdb",
    "dan_layer/storage_sqlite",
    "dan_layer/storage",
    "dan_layer/taiji_bor",
    "dan_layer/template_abi",
    "dan_layer/template_builtin",
    "dan_layer/template_lib",
    "dan_layer/template_macros",
    "dan_layer/template_test_tooling",
    "dan_layer/transaction_manifest",
    "dan_layer/transaction",
    "dan_layer/validator_node_rpc",
    "dan_layer/wallet/sdk",
    "dan_layer/wallet/storage_sqlite",
    "integration_tests",

    "utilities/transaction_generator",
    "utilities/transaction_submitter",
]
#
resolver = "2"

# Shutdown when panicking so we can see the error, specifically for the wallet
[profile.release]
panic = 'abort'
# By default, Rust will wrap an integer in release mode instead of throwing the overflow error
# seen in debug mode. Panicking at this time is better than silently using the wrong value.
overflow-checks = true

[patch.crates-io]
# Temporarily lock pgp to commit (master branch at time of writing) because the currently release crate locks zeroize to =1.3
liblmdb-sys = { git = "https://github.com/tari-project/lmdb-rs", tag = "0.7.6-tari.1" }

# Make a copy of this code, uncomment and replace account and my-branch with the name of your fork and the branch you want to temporarily use
#[patch."https://github.com/tari-project/tari.git"]
#minotaiji_app_grpc = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
#minotaiji_app_grpc = { path = "../taiji/applications/minotaiji_app_grpc" }
#minotaiji_wallet_grpc_client= { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
#minotaiji_node_grpc_client = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
#taiji_common = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
#taiji_common_types = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
#taiji_comms = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
#taiji_comms_rpc_macros = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
#taiji_core = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
#taiji_key_manager = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
#taiji_mmr = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
#taiji_p2p = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
#taiji_shutdown = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
#taiji_storage = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
#taiji_script = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
#minotaiji_wallet = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
#minotaiji_console_wallet = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
#taiji_service_framework = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
#taiji_comms_dht = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }

