[package]
name = "integration_tests"
authors = ["OnSight Tech Services LLC"]
description = "The Taiji validator node implementation"
repository = "https://github.com/onsight-tech-services/taiji-dan"
license = "BSD-3-Clause"
version = "0.50.0-pre.0"
edition = "2021"

[dependencies]
minotaiji_app_grpc = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
minotaiji_app_utilities = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
minotaiji_node = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
minotaiji_node_grpc_client = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
taiji_common = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
taiji_common_types = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
taiji_comms = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
taiji_comms_dht = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
minotaiji_console_wallet = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
minotaiji_wallet = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
taiji_p2p = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
taiji_shutdown = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }

tari_crypto = "0.18"
taiji_indexer = { path = "../applications/taiji_indexer" }
taiji_validator_node_cli = { path = "../applications/taiji_validator_node_cli" }
taiji_dan_common_types = { path = "../dan_layer/common_types" }
taiji_dan_engine = { path = "../dan_layer/engine" }
taiji_dan_storage = { path = "../dan_layer/storage" }
taiji_dan_wallet_daemon = { path = "../applications/taiji_dan_wallet_daemon" }
taiji_engine_types = { path = "../dan_layer/engine_types" }
taiji_indexer_client = { path = "../clients/taiji_indexer_client" }
taiji_template_builtin = { path = "../dan_layer/template_builtin" }
taiji_template_lib = { path = "../dan_layer/template_lib" }
taiji_transaction = { path = "../dan_layer/transaction" }
taiji_validator_node_client = { path = "../clients/validator_node_client" }
taiji_validator_node = { path = "../applications/taiji_validator_node" }
taiji_wallet_daemon_client = { path = "../clients/wallet_daemon_client" }
taiji_base_node_client = { path = "../clients/base_node_client" }
taiji_transaction_manifest = { path = "../dan_layer/transaction_manifest" }
taiji_dan_wallet_sdk = { path = "../dan_layer/wallet/sdk" }
#taiji_consensus = { path = "../../dan_layer/consensus" }

anyhow = "1.0.53"
base64 = "0.21.0"
config = "0.13.0"
cucumber = { version = "0.18.0", features = ["default", "libtest", "output-junit"] }
httpmock = "0.6.8"
indexmap = "1.9.1"
log = { version = "0.4.8", features = ["std"] }
log4rs = { version = "1.1.1", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
rand = "0.8"
reqwest = "0.11.11"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
time = "0.3.15"
tokio = { version = "1.10", features = ["macros", "time", "sync", "rt-multi-thread"] }
tonic = "0.6.2"

[[test]]
name = "cucumber" # this should be the same as the filename of your test target
harness = false # allows Cucumber to print output instead of libtest

[package.metadata.cargo-machete]
ignored = [
    # Want to enable some log4rs features
    "log4rs",
]
