[package]
name = "taiji_dan_app_utilities"
version = "0.0.1"
authors = ["OnSight Tech Services LLC"]
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
taiji_common_types = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
taiji_core = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2", default-features = false, features = ["transactions"] }
tari_crypto = "0.18"
taiji_shutdown = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }

taiji_dan_common_types = { path = "../../dan_layer/common_types" }
taiji_state_store_sqlite = { path = "../../dan_layer/state_store_sqlite" }
taiji_dan_engine = { path = "../../dan_layer/engine" }
taiji_dan_storage = { path = "../../dan_layer/storage" }
taiji_dan_storage_sqlite = { path = "../../dan_layer/storage_sqlite" }
taiji_engine_types = { path = "../../dan_layer/engine_types" }
taiji_epoch_manager = { path = "../../dan_layer/epoch_manager", features = ["base_layer"] }
taiji_base_node_client = { path = "../../clients/base_node_client" }
taiji_template_builtin = { path = "../../dan_layer/template_builtin" }
taiji_template_lib = { path = "../../dan_layer/template_lib" }
taiji_transaction = { path = "../../dan_layer/transaction" }
taiji_validator_node_client = { path = "../../clients/validator_node_client" }

anyhow = "1.0.53"
bytes = "1"
chrono = "0.4.22"
futures = { version = "^0.3.1" }
lazy_static = "1.4.0"
log = { version = "0.4.8", features = ["std"] }
mini-moka = "0.10.0"
dashmap = "5.5.0"
std-semaphore = "0.1.0"
prost = "0.9"
reqwest = "0.11.11"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "^1.0.20"
tokio = { version = "1.10", features = ["macros", "time", "sync", "rt-multi-thread"] }
tokio-stream = { version = "0.1.7", features = ["sync"] }
