[package]
name = "taiji_dan_wallet_cli"
authors = ["OnSight Tech Services LLC"]
description = "The Taiji DAN wallet CLI"
repository = "https://github.com/onsight-tech-services/taiji-dan"
license = "BSD-3-Clause"
version = "0.0.1"
edition = "2021"

[dependencies]
taiji_common_types = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
taiji_dan_common_types = { path = "../../dan_layer/common_types" }
taiji_dan_engine = { path = "../../dan_layer/engine" }
taiji_engine_types = { path = "../../dan_layer/engine_types" }
tari_utilities = "0.5.1"
taiji_wallet_daemon_client = { path = "../../clients/wallet_daemon_client" }
taiji_template_lib = { path = "../../dan_layer/template_lib" }
taiji_transaction = { path = "../../dan_layer/transaction" }
taiji_transaction_manifest = { path = "../../dan_layer/transaction_manifest" }
# Needed for VersionedSubstateAddress
taiji_dan_wallet_sdk = { path = "../../dan_layer/wallet/sdk" }

anyhow = "1.0.65"
base64 = "0.20.0-alpha.1"
clap = { version = "3.2.22", features = ["derive", "env"] }
log = "0.4.17"
multiaddr = "0.14.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde_json = "1.0.85"
time = "0.3.15"
thiserror = "1.0.36"
tokio = { version = "1", features = ["macros"] }
url = "2.3.1"
