[package]
name = "taiji_signaling_server"
version = "0.1.0"
edition = "2021"
authors = ["OnSight Tech Services LLC"]
description = "WebRTC signaling server implementation"
repository = "https://github.com/onsight-tech-services/taiji-dan"
license = "BSD-3-Clause"

[dependencies]
taiji_common = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
taiji_shutdown = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
taiji_dan_wallet_sdk = { path = "../../dan_layer/wallet/sdk" }
taiji_dan_common_types = { path = "../../dan_layer/common_types" }

anyhow = "1.0.69"
axum = { version = "0.6", features = ["headers"] }
axum-jrpc = { version = "0.3.2", features = ["anyhow_error"] }
clap = { version = "4.1.4", features = ["derive", "env"] }
dirs = "4.0.0"
log = "0.4.17"
serde = "1.0.152"
serde_json = "1.0.92"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tower-http = { version = "0.3.5", default-features = false, features = ["cors", "trace"] }
jsonwebtoken = "8.3.0"
chrono = "0.4.24"
webrtc = "0.7.2"
