[package]
name = "taiji_validator_node"
authors = ["OnSight Tech Services LLC"]
description = "The Taiji validator node implementation"
repository = "https://github.com/onsight-tech-services/taiji-dan"
license = "BSD-3-Clause"
version = "0.0.1"
edition = "2021"

[dependencies]
minotaiji_app_grpc = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
minotaiji_app_utilities = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
taiji_common = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
taiji_common_types = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
taiji_comms = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
taiji_comms_logging = { path = "../../comms/taiji_comms_logging" }
taiji_core = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2", default-features = false, features = ["transactions"] }
tari_crypto = "0.18"
taiji_validator_node_rpc = { path = "../../dan_layer/validator_node_rpc" }
taiji_dan_app_utilities = { path = "../taiji_dan_app_utilities" }
taiji_dan_common_types = { path = "../../dan_layer/common_types" }
taiji_dan_p2p = { path = "../../dan_layer/p2p" }
taiji_dan_engine = { path = "../../dan_layer/engine" }
taiji_dan_storage = { path = "../../dan_layer/storage" }
taiji_dan_storage_sqlite = { path = "../../dan_layer/storage_sqlite" }
taiji_engine_types = { path = "../../dan_layer/engine_types" }
taiji_p2p = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
taiji_shutdown = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
taiji_storage = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
taiji_template_lib = { path = "../../dan_layer/template_lib" }
taiji_transaction = { path = "../../dan_layer/transaction" }
taiji_validator_node_client = { path = "../../clients/validator_node_client" }
minotaiji_wallet_grpc_client = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
taiji_base_node_client = { path = "../../clients/base_node_client" }
taiji_epoch_manager = { path = "../../dan_layer/epoch_manager", features = ["base_layer"] }
taiji_indexer_lib = { path = "../../dan_layer/indexer_lib" }
taiji_comms_rpc_state_sync = { path = "../../dan_layer/comms_rpc_state_sync" }

taiji_consensus = { path = "../../dan_layer/consensus" }
taiji_state_store_sqlite = { path = "../../dan_layer/state_store_sqlite" }

anyhow = "1.0.53"
async-trait = "0.1.50"
axum = "0.6.0"
axum-jrpc = { version = "0.3.2", features = ["anyhow_error"] }
clap = { version = "3.2.5", features = ["env"] }
config = "0.13.0"
futures = { version = "^0.3.1" }
include_dir = "0.7.2"
indexmap = "2.0.0"
json5 = "0.2.2"
libsqlite3-sys = { version = "0.25", features = ["bundled"] }
lmdb-zero = "0.4.4"
log = { version = "0.4.8", features = ["std"] }
log4rs = { version = "1.1.1", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
prost = "0.9"
rand = "0.8"
reqwest = "0.11.11"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "^1.0.20"
time = "0.3.15"
tokio = { version = "1.10", features = ["macros", "time", "sync", "rt-multi-thread"] }
tonic = "0.6.2"
tower = "0.4"
tower-http = { version = "0.3.0", features = ["cors"] }
tower-layer = "0.3"
mime_guess = "2.0.4"

[build-dependencies]
taiji_common = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2", package = "taiji_common", features = ["build"] }

[package.metadata.cargo-machete]
ignored = [
    # We want to bundle this lib
    "libsqlite3-sys",
    # Want to enable some log4rs features
    "log4rs",
]
