[package]
name = "taiji_validator_node_cli"
authors = ["OnSight Tech Services LLC"]
description = "The Taiji validator node CLI"
repository = "https://github.com/onsight-tech-services/taiji-dan"
license = "BSD-3-Clause"
version = "0.0.1"
edition = "2021"

[dependencies]
taiji_common_types = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
tari_crypto = "0.18"
taiji_dan_common_types = { path = "../../dan_layer/common_types" }
taiji_dan_engine = { path = "../../dan_layer/engine" }
taiji_engine_types = { path = "../../dan_layer/engine_types" }
taiji_template_builtin = { path = "../../dan_layer/template_builtin" }
taiji_template_lib = { path = "../../dan_layer/template_lib" }
taiji_transaction = { path = "../../dan_layer/transaction" }
taiji_transaction_manifest = { path = "../../dan_layer/transaction_manifest" }
taiji_validator_node_client = { path = "../../clients/validator_node_client" }
taiji_dan_storage = { path = "../../dan_layer/storage" }

anyhow = "1.0.65"
clap = { version = "3.2.22", features = ["derive", "env"] }
cargo_metadata = "0.15.3"
dirs = "4.0.0"
jfs = "0.7.1"
log = "0.4.17"
multiaddr = "0.14.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde = "1.0.144"
serde_json = "1.0.85"
thiserror = "1.0.36"
time = "0.3.15"
tokio = { version = "1", features = ["macros", "time"] }
