[package]
name = "taiji_base_node_client"
version = "0.50.0-pre.0"
authors = ["OnSight Tech Services LLC"]
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
minotaiji_app_grpc = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
minotaiji_node_grpc_client = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
taiji_common_types = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
taiji_core = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2", default-features = false, features = ["transactions"] }
tari_utilities = "0.5.1"

taiji_dan_common_types = { path = "../../dan_layer/common_types" }
taiji_engine_types = { path = "../../dan_layer/engine_types" }

async-trait = "0.1"
log = "0.4.8"
serde = "1.0"
thiserror = "^1.0.20"
tonic = "0.6"
