[package]
name = "taiji_indexer_client"
version = "0.0.1"
edition = "2021"
authors = ["OnSight Tech Services LLC"]
description = "Taiji indexer client library"
repository = "https://github.com/onsight-tech-services/taiji-dan"
license = "BSD-3-Clause"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
taiji_common_types = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }

taiji_dan_common_types = { path = "../../dan_layer/common_types" }
taiji_engine_types = { path = "../../dan_layer/engine_types" }
taiji_transaction = { path = "../../dan_layer/transaction" }
taiji_dan_storage = { path = "../../dan_layer/storage" }

anyhow = "1.0.65"
reqwest = { version = "0.11.11", features = ["json"] }
multiaddr = "0.14"
serde = "1.0.144"
serde_json = "1.0.85"
serde_with = "2.3"
thiserror = "1.0"
