[package]
name = "taiji_wallet_daemon_client"
version = "0.0.1"
edition = "2021"
authors = ["OnSight Tech Services LLC"]
description = "Taiji wallet daemon client library"
repository = "https://github.com/onsight-tech-services/taiji-dan"
license = "BSD-3-Clause"

[dependencies]
taiji_dan_common_types = { path = "../../dan_layer/common_types" }
taiji_engine_types = { path = "../../dan_layer/engine_types" }
taiji_common_types = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
taiji_transaction = { path = "../../dan_layer/transaction" }
taiji_dan_wallet_sdk = { path = "../../dan_layer/wallet/sdk" }
# TODO: Ideally we should not have to include the WASM template lib, we should perhaps extract the address types into a separate crate (e.g. template_types)
taiji_template_lib = { path = "../../dan_layer/template_lib"}

reqwest = { version = "0.11.11", features = ["json"] }
serde = "1.0.144"
serde_json = "1.0.85"
thiserror = "1.0.38"
