[package]
name = "taiji_comms_logging"
version = "0.0.1"
edition = "2021"
authors = ["OnSight Tech Services LLC"]
description = "Debugging tool that logs all network messages in a SQLite database"
repository = "https://github.com/onsight-tech-services/taiji-dan"
license = "BSD-3-Clause"

[dependencies]
diesel = { version = "2", default-features = false, features = ["sqlite", "chrono"] }
diesel_migrations = "2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
log = { version = "0.4.8", features = ["std"] }
chrono = { version = "0.4.23", features = ["serde"] }
