[package]
name = "taiji_dan_common_types"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
taiji_common_types = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
tari_crypto = { version = "0.18", features = ["borsh"] }
taiji_engine_types = { path = "../engine_types" }
taiji_bor = { path = "../taiji_bor" }
taiji_mmr = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }

blake2 = "0.10.6"
newtype-ops = "0.1.4"
rand = "0.8"
prost = "0.9"
prost-types = "0.9"
serde = "1.0.126"
ruint = "1.8.0"

[build-dependencies]
taiji_common = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2", package = "taiji_common", features = ["build"] }

[package.metadata.cargo-machete]
ignored = ["prost", "prost-types"] # false positive, used in OUT_DIR structs
