[package]
name = "taiji_comms_rpc_state_sync"
version = "0.50.0-pre.0"
edition = "2021"
authors = ["OnSight Tech Services LLC"]
description = "Taiji template runtime engine"
repository = "https://github.com/onsight-tech-services/taiji-dan"
license = "BSD-3-Clause"

[dependencies]
taiji_epoch_manager = { path = "../epoch_manager" }
taiji_dan_storage = { path = "../storage" }
taiji_validator_node_rpc = { path = "../validator_node_rpc" }
taiji_consensus = { path = "../consensus" }
taiji_dan_common_types = { path = "../common_types" }
taiji_transaction = { path = "../transaction" }

taiji_comms = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }

anyhow = "1.0.75"
async-trait = "0.1.73"
futures = "0.3.28"
log = "0.4.20"
thiserror = "1.0.48"
