[package]
name = "taiji_consensus"
version = "0.50.0-pre.0"
edition = "2021"
authors = ["OnSight Tech Services LLC"]
description = "Taiji template runtime engine"
repository = "https://github.com/onsight-tech-services/taiji-dan"
license = "BSD-3-Clause"

[dependencies]
taiji_dan_common_types = { path = "../common_types" }
taiji_dan_storage = { path = "../storage" }
taiji_transaction = { path = "../transaction" }
taiji_epoch_manager = { path = "../epoch_manager" }

# Used for PublicKey and Signature
taiji_common_types = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
taiji_mmr = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
taiji_shutdown = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }

anyhow = "1.0"
async-trait = "0.1.68"
log = "0.4"
serde = "1.0"
thiserror = "1.0"
tokio = { version = "1", default-features = false, features = ["sync"] }
