[package]
name = "consensus_tests"
version = "0.50.0-pre.0"
edition = "2021"
authors = ["OnSight Tech Services LLC"]
description = "Taiji template runtime engine"
repository = "https://github.com/onsight-tech-services/taiji-dan"
license = "BSD-3-Clause"

[dependencies]

[dev-dependencies]
taiji_dan_common_types = { path = "../common_types" }
taiji_consensus = { path = "../consensus" }
taiji_dan_storage = { path = "../storage" }
taiji_state_store_sqlite = { path = "../state_store_sqlite" }
taiji_transaction = { path = "../transaction" }
taiji_engine_types = { path = "../engine_types" }
taiji_epoch_manager = { path = "../epoch_manager" }

taiji_common_types = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
taiji_mmr = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
taiji_shutdown = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
tari_crypto = "0.18"

anyhow = "1.0"
async-trait = "0.1.68"
log = "0.4"
serde = "1.0"
thiserror = "1.0"
tokio = { version = "1", default-features = false, features = ["sync", "rt-multi-thread"] }
rand = "0.8"
futures = "0.3"
fern = "0.6.2"
humantime = "2.1.0"
itertools = "0.11.0"
