[package]
name = "taiji_dan_engine"
version = "0.0.1"
edition = "2021"
authors = ["OnSight Tech Services LLC"]
description = "Taiji template runtime engine"
repository = "https://github.com/onsight-tech-services/taiji-dan"
license = "BSD-3-Clause"

[dependencies]
taiji_bor = { path = "../taiji_bor" }
taiji_common_types = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2", package = "taiji_common_types" }
tari_crypto = { version = "0.18", features = ["borsh"] }
taiji_dan_common_types = { path = "../common_types" }
taiji_engine_types = { path = "../engine_types" }
taiji_mmr = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2", package = "taiji_mmr" }
taiji_template_abi = { path = "../template_abi", features = ["std"] }
taiji_template_lib = { path = "../template_lib" }
tari_utilities = "0.4.10"
taiji_transaction = { path = "../transaction" }

anyhow = "1.0.53"
blake2 = "0.10.6"
cargo_toml = "0.11.5"
d3ne = { git = "https://github.com/stringhandler/d3ne-rs.git", tag = "v0.8.0-pre.3" }
log = { version = "0.4.8", features = ["std"] }
rand = "0.8"
serde = "1.0.150"
serde_json = "1"
thiserror = "^1.0.20"
tempfile = "3.3.0"
wasmer = "2.3.0"
wasmer-middlewares = "2.3.0"

[dev-dependencies]
taiji_template_test_tooling = { path = "../template_test_tooling" }
taiji_transaction_manifest = { path = "../transaction_manifest" }
taiji_transaction = { path = "../transaction" }
