[package]
name = "taiji_engine_types"
version = "0.0.1"
edition = "2021"
authors = ["OnSight Tech Services LLC"]
description = "Shared Taiji engine data types"
repository = "https://github.com/onsight-tech-services/taiji-dan"
license = "BSD-3-Clause"

[dependencies]
taiji_bor = { path = "../taiji_bor" }
taiji_common_types = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
tari_crypto = { version = "0.18", features = ["borsh"] }
taiji_template_abi = { path = "../template_abi", features = ["std"] }
taiji_template_lib = { path = "../template_lib" }
tari_utilities = "0.5.1"

borsh = "0.10"
base64 = "0.21.0"
blake2 = "0.10.6"
rand = "0.8"
digest = "0.10"
hex = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
serde = "1.0.126"
serde_json = "1.0"
thiserror = "1"

[features]
default = ["debugging"]
# Includes the ability to create free test coins
debugging = []
