[package]
name = "taiji_epoch_manager"
version = "0.50.0-pre.0"
edition = "2021"
authors = ["OnSight Tech Services LLC"]
description = "The Taiji DAN wallet library"
repository = "https://github.com/onsight-tech-services/taiji-dan"
license = "BSD-3-Clause"

[dependencies]
taiji_core = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
taiji_common_types = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
taiji_shutdown = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
taiji_dan_common_types = { path = "../common_types" }
taiji_comms = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2", optional = true }
taiji_dan_storage = { path = "../storage" }
taiji_dan_storage_sqlite = { path = "../storage_sqlite", optional = true }
taiji_base_node_client = { path = "../../clients/base_node_client", optional = true }
tari_crypto = "0.18"
taiji_mmr = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2", optional = true }
tokio = { version = "1", default-features = false, features = ["sync"] }

anyhow = "1.0"
async-trait = "0.1"
thiserror = "1.0"
log = { version = "0.4", optional = true }

[features]
base_layer = ["log", "taiji_base_node_client", "taiji_comms", "taiji_dan_storage_sqlite", "taiji_mmr"]