[package]
name = "taiji_indexer_lib"
version = "0.50.0-pre.0"
edition = "2021"
authors = ["OnSight Tech Services LLC"]
description = "Network scanning and indexing library"
repository = "https://github.com/onsight-tech-services/taiji-dan"
license = "BSD-3-Clause"

[dependencies]
taiji_dan_common_types = { path = "../common_types" }
taiji_epoch_manager = { path = "../epoch_manager" }
taiji_engine_types = { path = "../engine_types" }
taiji_transaction = { path = "../transaction" }
taiji_template_lib = { path = "../template_lib" }
taiji_validator_node_rpc = { path = "../validator_node_rpc" }

log = "0.4"
serde = "1.0"
rand = "0.8.5"
thiserror = "1.0"
