[package]
name = "taiji_state_store_sqlite"
authors = ["OnSight Tech Services LLC"]
description = "The Taiji DAN wallet daemon"
repository = "https://github.com/onsight-tech-services/taiji-dan"
license = "BSD-3-Clause"
version = "0.50.0-pre.0"
edition = "2021"

[dependencies]
taiji_dan_storage = { path = "../storage" }
taiji_dan_common_types = { path = "../common_types" }
taiji_transaction = { path = "../transaction" }
# TODO: needed for FixedHash
taiji_common_types = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }

anyhow = "1.0"
bigdecimal = "0.4.1"
diesel = { version = "2", default-features = false, features = ["sqlite", "time", "numeric"] }
diesel_migrations = "2"
log = "0.4"
hex = "0.4"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
time = "0.3"

[dev-dependencies]
rand = "0.8"