[package]
name = "taiji_dan_storage"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
taiji_common_types = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
taiji_dan_common_types = { path = "../common_types" }

# Shard store deps
taiji_engine_types = { path = "../engine_types" }
taiji_transaction = { path = "../transaction" }
taiji_core = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
taiji_mmr = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
tari_crypto = "0.18"
tari_utilities = "0.4.10"

anyhow = "1.0"
chrono = "0.4.23"
log = "0.4"
rand = "0.8"
thiserror = "1"
serde = "1.0"
time = { version = "0.3", features = ["serde"] }
