[package]
name = "taiji_dan_storage_lmdb"
version = "0.0.1"
edition = "2021"
authors = ["OnSight Tech Services LLC"]
description = "LMDB implementation of the Taiji Storage API"
repository = "https://github.com/onsight-tech-services/taiji-dan"
license = "BSD-3-Clause"

[dependencies]
taiji_bor = { path = "../taiji_bor" }
taiji_dan_engine = { path = "../engine" }
taiji_dan_common_types = { path = "../common_types" }
taiji_storage = {  git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2", package = "taiji_storage" }

lmdb-zero = "0.4.4"
hex = "0.4.3"
serde = { version = "1.0.143", default-features = false, features = ["derive", "alloc"] }

[dev-dependencies]
tempfile = "3.3.0"
