[package]
name = "taiji_dan_storage_sqlite"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
taiji_common_types = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2", package = "taiji_common_types" }
taiji_dan_common_types = { path = "../common_types" }
tari_utilities = "0.5.1"
taiji_dan_storage = { path = "../storage" }

diesel = { version = "2", default-features = false, features = ["sqlite", "chrono"] }
diesel_migrations = "2"
thiserror = "1.0.30"
chrono = "0.4.19"
log = { version = "0.4.8", features = ["std"] }
serde_json = "1.0.85"
serde = "1.0"

[dev-dependencies]
rand = "0.8"
tari_crypto = "0.18"
