[package]
name = "taiji_template_abi"
version = "0.0.1"
edition = "2021"
authors = ["OnSight Tech Services LLC"]
description = "Defines the low-level Taiji engine ABI for WASM targets"
repository = "https://github.com/onsight-tech-services/taiji-dan"
license = "BSD-3-Clause"

[dependencies]
taiji_bor = { path = "../taiji_bor", default-features = false }
serde = { version = "1.0.143", default-features = false, features = ["alloc", "derive"] }
hashbrown = { version = "0.13.2", optional = true }

[features]
default = ["std"]
std = ["taiji_bor/std"]
# TODO: look into how this is done properly
alloc = ["hashbrown"]
