[package]
name = "taiji_template_lib"
version = "0.0.1"
edition = "2021"
authors = ["OnSight Tech Services LLC"]
description = "Taiji template library provides abstrations that interface with the Taiji validator engine"
repository = "https://github.com/onsight-tech-services/taiji-dan"
license = "BSD-3-Clause"

[dependencies]
taiji_template_abi = { path = "../template_abi" }
taiji_template_macros = { path = "../template_macros", optional = true }
taiji_bor = { path = "../taiji_bor", default-features = false }

newtype-ops = "0.1.4"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde-big-array = "0.5.1"

[dev-dependencies]
serde_json = "1.0.73"

[features]
default = ["macro", "std"]
macro = ["taiji_template_macros"]
std = ["serde/std", "taiji_bor/std"]
