[package]
name = "taiji_template_macros"
version = "0.0.1"
edition = "2021"
authors = ["OnSight Tech Services LLC"]
description = "Taiji template macro"
repository = "https://github.com/onsight-tech-services/taiji-dan"
license = "BSD-3-Clause"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.42"
quote = "1.0.20"
syn = { version = "1.0.98", features = ["full", "extra-traits"] }

[dev-dependencies]
indoc = "1.0.6"
