[package]
name = "taiji_template_test_tooling"
version = "0.0.1"
edition = "2021"
authors = ["OnSight Tech Services LLC"]
description = "Test tooling for Taiji template development"
repository = "https://github.com/onsight-tech-services/taiji-dan"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
taiji_dan_engine = { path = "../engine" }
tari_crypto = "0.18"
taiji_template_lib = { path = "../template_lib" }
taiji_engine_types = { path = "../engine_types" }
taiji_transaction_manifest = { path = "../transaction_manifest" }
taiji_template_builtin = { path = "../template_builtin" }
taiji_transaction = { path = "../transaction" }
taiji_dan_common_types = { path = "../common_types" }
taiji_bor = { path = "../taiji_bor" }

anyhow = "1.0.68"
serde = { version = "1.0.144", features = ["derive"] }
