[package]
name = "taiji_transaction"
version = "0.0.1"
edition = "2021"
authors = ["OnSight Tech Services LLC"]
description = "Taiji transaction builder and associated data types"
repository = "https://github.com/onsight-tech-services/taiji-dan"
license = "BSD-3-Clause"

[dependencies]
taiji_common_types = { git = "https://github.com/onsight-tech-services/taiji.git", branch = "taiji-feature-dan2" }
taiji_engine_types = { path = "../engine_types" }
taiji_dan_common_types = { path = "../common_types" }
tari_crypto = { version = "0.18", features = ["borsh"] }
taiji_template_lib = { path = "../template_lib" }

rand = "0.8"
serde = "1.0.126"
thiserror = "1"

#siphasher = "0.3.1"
#bincode = "1.3.3"